<resources>
    <string name="app_name">MyObject</string>
    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Acceuil</string>
    <string name="menu_gallery">Galerie</string>
    <string name="menu_slideshow">Diaporama</string>
    <string name="hello_blank_fragment">Bonjour fragment vierge</string>
    <string name="lost_found"><![CDATA[Lost & Found]]></string>
    <string name="acces_object">Accès aux status</string>
    <string name="action_settings">Parametre</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="profile">profile</string>
    <string name="help">Aider</string>
    <string name="other">Autre</string>
    <string name="settings">Réglages</string>
    <string name="terms_and_conditions">Termes et conditions</string>
    <string name="rechercher_ici">Rechercher ici…</string>
    <string name="objets_perdues">Objets perdues</string>
    <string name="aider_les_autres_est_un_acte_noble">Aider les autres est un acte noble !</string>
    <string name="objets_trouv_s">Objets trouvés</string>
    <string name="nous_esp_rons_que_vous_trouverez_ce_que_vous_cherchez">Nous espérons que vous trouverez ce que vous cherchez !</string>
    <string name="aidez_les_autres_vous_aider">Aidez les autres à vous aider</string>
    <string name="gallery_text">texte de la galerie</string>
    <string name="my_object">My Object</string>
    <string name="lost_found_home">Lost / Found</string>
    <string name="see_all_posts">Voir tous les status</string>
    <string name="slide_show_text">Texte du diaporama</string>
    <string name="sign_up_via_phone">Par téléphone</string>
    <string name="sign_up_via_email">Par email</string>
    <string name="help_other_to_help_you">Aidez les autres à vous aider</string>
    <string name="sign_in">S\'identifier</string>
    <string name="enter_email">Entrez l\'email</string>
    <string name="enter_password">Entrer le mot de passe</string>
    <string name="don_t_have_a_account">Vous n\'avez pas de compte ?</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="login">connexion</string>
    <string name="forgot_your_password">Mot de passe oublié ?</string>
    <string name="full_name">Nom et prénom</string>
    <string name="mobile_number">Numéro de portable</string>
    <string name="password">Mot de passe</string>
    <string name="confirmation_password">Mot de passe de confirmation</string>
    <string name="address">adresse</string>
    <string name="register">S\'inscrire</string>
    <string name="login_btn">Connexion</string>
    <string name="reinisialisation_nde_mot_de_passe">Reinisialisation\nde mot de passe</string>
    <string name="veuillez_remplir_le_formulaire">Veuillez remplir le formulaire :</string>
    <string name="avez_vous_trouv_quelque_chose_ou_voulez_vous_chercher">Avez-vous trouvé quelque chose ou voulez-vous chercher?</string>
    <string name="choisir">choisir :</string>
    <string name="nom_et_prenom">Nom et prenom :</string>
    <string name="ecrire_votre_nom_ici">Ecrire votre nom ici..</string>
    <string name="choisissez_image">Choisissez image</string>
    <string name="capturer_image">Capturer image</string>
    <string name="categorie">Categorie :</string>
    <string name="nom_du_sujet">Nom du sujet</string>
    <string name="nom_de_l_objet">Nom de l\'objet :</string>
    <string name="emplacement">Emplacement :</string>
    <string name="d_o_tu_l_as_trouv">D\'où tu l\'as trouvé</string>
    <string name="description">Description:</string>
    <string name="d_tails_de_l_objet_ici">Détails de l\'objet ici !</string>
    <string name="ins_rer_un_objet">Insérer un objet</string>
    <string name="termes_et_conditions">termes et conditions</string>
    <string name="conditions_d_utilisations">Conditions d\'utilisations :</string>
    <string name="la_n_cessit_d_adapter_ses_conditions_g_n_rales_d_utilisation">La nécessité d\'adapter ses conditions générales d\'utilisation :</string>
    <string name="textcond1">Avant toute chose, que l\'application soit gratuite ou non, le contrat conclu entre l\'éditeur de l\'application et son utilisateur est un contrat sous forme électronique. Dès lors, le respect des dispositions des articles 1369 et suivants du Code civil est nécessaire : les conditions de forme tenant à la conclusion d\'un contrat électronique devront nécessairement être respectées par l\'éditeur de l\'application. Dans le cas d\'une application payante, le contrat est conclu entre un professionnel (l\'éditeur de l\'application) et un consommateur (son utilisateur). Les conditions générales d\'utilisation doivent ainsi faire mentionner le respect des dispositions du code de la consommation, et notamment le respect des articles L. 121-16 et suivants de ce dernier. Parmi ces règles relatives au contrat à distance, les plus importantes sont les règles relatives d\'une part à l\'obligation d\'information pré-contractuelle de l\'utilisateur. Ainsi, toutes les dispositions relatives au droit de rétractation dont dispose l\'utilisateur et les caractéristiques essentielles de l\'application usitée (comme son prix, ses services proposés, …) devront être inscrites dans les conditions générales d\'utilisation. De plus, dans le cas où des contrats seraient amenés à être conclus entre professionnels, les conditions générales d\'utilisation doivent être complétés par la mention des informations disposées aux articles L. 441-6 et suivants du code de commerce. Dans le cas d\'une application gratuitement téléchargeable, certaines exigences du droit de la consommation deviennent caduques. Le droit de rétractation disparaît ainsi que certaines clauses relatives aux prix, … Cependant, les caractéristiques essentielles du bien ou du service doivent figurer dans les conditions générales d\'utilisation. De plus, même dans le cas d\'applications téléchargeables gratuitement, les conditions générales d\'utilisation qui comportent des clauses abusives ou contraires à l\'ordre public sont interdites. Si le respect de l\'ensemble de ces dispositions légales est nécessaire avant la mise en route d\'une application, des règles juridiques interviennent également dans le suivi de cette dernière. II- Le respect des règles juridiques dans le suivi d\'une application. Lorsque l\'application est mise sur le marché et que les utilisateurs commencent à utiliser cette dernière, la question du traitement des données personnelles apparaît et impose des contraintes à l\'éditeur. De plus, si ce dernier exerce une activité de commerce électronique, il se voit soumis à un régime spécial de responsabilité.</string>
    <string name="le_traitement_des_donn_es_caract_re_personnel_et_l_information_de_l_utilisateur">Le traitement des données à caractère personnel et l\'information de l\'utilisateur :</string>
    <string name="textcond2">Du fait de son statut de donnée sensible, une donnée personnelle fait l\'objet d\'une législation particulière, et ce depuis la promulgation de la loi du 6 janvier 1978. Pour l\'éditeur d\'une application, le traitement de données personnelles des utilisateurs éventuellement collectées par le téléchargement n\'est pas à prendre à la légère. En effet, comme dit précédemment, l\'éditeur devra dans un premier temps demander une autorisation à la Commission nationale Informatique et Libertés, la CNIL, afin d\'obtenir le droit de collecter et de traiter les données personnelles des utilisateurs sous peine de sanctions financières. De plus, au regard des dispositions de la loi, un traitement de données à caractère personnel est soumis à plusieurs règles. Dans un premier temps, le traitement des données doit être loyal et licite. Cela signifie que l\'éditeur doit clairement informer l\'utilisateur de l\'utilisation des données personnelles qui en est faite. Cette information peut d\'ailleurs faire également l\'objet d\'une adaptation des conditions générales d\'utilisation d\'une application. De plus, l\'éditeur a un devoir particulier envers l\'utilisateur de données personnelles : celui de l\'informer de tout ses droits, notamment son droit d\'accès, de rectification et d\'opposition à un tel traitement. De plus, l\'utilisateur doit être en mesure, à tout moment, de pouvoir suspendre ou arrêter le service lorsqu\'il le souhaite lorsque ces données sont utilisés à des fins publicitaires. Les finalités d\'un tel traitement doivent également être déterminées, explicites et légitimes. Un point est à noter concernant la responsabilité de l\'éditeur lorsqu\'il traite des données personnelles : si la finalité du traitement se voit détourné, alors ce dernier engage sa responsabilité pénale. Enfin, la CNIL insiste particulièrement sur la proportionnalité de la finalité du traitement des données à caractère personnel par rapport à l\'utilisation qui en est faite : une collecte de données personnelles ne doit pas excéder un seuil raisonnable. Il en va de même pour l\'objectif et la durée du traitement. La charge de la sécurité des données des utilisateurs incombe également à l\'éditeur sous peine d\'engager sa responsabilité.</string>
    <string name="la_responsabilit_de_l_diteur_exer_ant_une_activit_de_commerce_lectronique">La responsabilité de l\'éditeur exerçant une activité de commerce électronique :</string>
    <string name="textcond3">Que l\'application soit téléchargeable ou non gratuitement, l\'éditeur propose la fourniture de biens, services ou simples informations par le biais de communications commerciales effectuées à distance ou par voie électronique. Le prix de l\'application ne rentre donc pas dans la qualification juridique du commerce électronique, et un régime légal particulier intervient. En effet, l\'éditeur devient responsable de plein droit de l\'obligation contractuelle effectuée avec son client, ou l\'utilisateur de l\'application. Ainsi, si cette dernière ne fonctionne pas en corrélation avec le descriptif du produit, que vous soyez ou non le développeur, l\'éditeur endosse la responsabilité contractuelle d\'un tel cas de figure. Cependant, si la mauvaise exécution de l\'application résulte d\'un cas de force majeure, du fait imprévisible d\'un tiers au contrat ou encore de la mauvaise exécution de l\'application par le client lui-même, l\'éditeur peut, sous réserve de preuve, s\'exonérer de sa responsabilité. De plus, sur le marché du commerce électronique, la loi française interdit l\'existence de types d\'applications sur le territoire. L\'article 19 de la loi pour la confiance dans l\'économie numérique, ou LCEN, impose pour l\'éditeur d\'une application la présentation d\'un prix clair et non ambigüe : toute mention à d\'éventuelles taxes et des frais de livraison est obligatoire pour qu\'un prix soit dénué de toute ambigüité. Enfin, l\'éditeur d\'une application a une obligation de stockage des contrats conclus sous forme électronique lorsque le montant de ces derniers dépasse un certain seuil. Pour conclure, le cadre juridique relatif au développement d\'une application mobile apparait complexe et lourd de dispositions. Cependant, le développement du M-commerce est aujourd\'hui telle que les sanctions financières imposées aux éditeurs des applications en cas de non respect du droit peuvent rapidement atteindre plusieurs milliers d\'euros. De plus, la CNIL affiche actuellement un intérêt particulier pour les applications utilisant une géolocalisation : en cas de collecte de données de localisation auprès d\'un utilisateur, ce dernier doit pouvoir rendre son accord exprès au moyen du système</string>
    <string name="modifier_mot_de_passe">modifier mot de passe</string>
</resources>