<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person2"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />


    </group>
    <item android:title="@string/other">
        <menu>

            <item
                android:id="@+id/nav_paschange"
                android:icon="@drawable/settings"
                android:title="@string/modifier_mot_de_passe" />

            <item
                android:id="@+id/nav_cond"
                android:icon="@drawable/conditions"
                android:title="@string/termes_et_conditions" />



        </menu></item>
</menu>