<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myobject3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myobject3.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myobject3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.myobject3.ui.profil.ProfilFragment"
        android:label="fragment_profil"
        tools:layout="@layout/fragment_profil" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.myobject3.ui.setting.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.myobject3.ui.help.HelpFragment"
        android:label="fragment_help"
        tools:layout="@layout/fragment_help" />
</navigation>